version 0.3.4 (08/14/2003):

08/14/2003 Bob Rossi <bob@brasko.net>
    
	* configure.in: Changed version number to 0.3.4 for release
	* NEWS: Added new version number.

08/12/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with fix for prompt refresh problem after when
	^c is recieved after the file dialog has been opened.

08/12/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with ada highlighting string literal bug.

08/11/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with control_c bug fix.

08/01/2003 Bob Rossi <bob@brasko.net>
	
	* NEWS: Updating NEWS file with buffered control key libinput bug.

07/16/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with 'string literal' bug.

version 0.3.3a (07/16/2003):

07/15/2003 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Adding the 'cvs tag' command to list.
	Adding the README file to the website.
	* README: Removing the tabs from the README file

version 0.3.3 (07/15/2003):

07/15/2003 Bob Rossi <bob@brasko.net>

	* FAQ: Added bit about tty
    * Changed version number to 0.3.3 for release

07/14/2003 Bob Rossi <bob@brasko.net>

	* README: Removed old pgup,pgdn commands. Added vi style pgup,pgdn.
	* NEWS: Adding progress that should be noted in the NEWS file.

06/25/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed version number to 0.3.2-cvs for cvs development

version 0.3.2 (06/25/2003):

06/25/2003 Bob Rossi <bob_rossi@cox.com>
   
   * README: Added winminheight doc

06/19/2003 Bob Rossi <bob_rossi@cox.com>

	* NEWS: Updating NEWS file with new features for cgdb-0.3.2 release

06/19/2003 Bob Rossi <bob_rossi@cox.com>

	* README: Added dependency information

06/19/2003 Bob Rossi <bob_rossi@cox.com>

	* README: Added tabstop,syntax and escdelay commands

04/28/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed version number to 0.3.1-cvs for cvs development

version 0.3.1 (04/28/2003):

04/28/2003 Bob Rossi <bob_rossi@cox.net>
