@@ -1,3 +1,10 @@
+08/17/2003 Bob Rossi <bob@brasko.net>
+
+	* configure.in: Changed version number to 0.3.4-cvs.
+	* Makefile.am: added doxygen rule. Creates documentation.
+	* release-todo.txt: added line that says to change version number in
+	doxygen config files.
+
 version 0.3.4 (08/14/2003):
 
 08/14/2003 Bob Rossi <bob@brasko.net>
